@@ -8,7 +8,9 @@ example2.c: Imporved version of the barebones shell but with the help of libread
             bloated libreadline make any sense? It looks like to me its some black magic dealing
             with terminals. Approx 30K lines of code for libreadline and also 20K for 
             libeditline, are you kidding me, its the most bloated libraries I've ever seen in my
-            life.
+            life. Does it even make sense to link to those libraries for your small program under
+            16k?
+
 example3:   The lightest we've gotten with emacs-like keybindings, but without variable 
             expansion, etc using liblinenoise this time which is the lightest.
 
@@ -16,9 +18,13 @@ readline_example: A simple lightweight example of how readline works created by 
 
 linenoise:        A simple line editing library that aims to the idea that a line editing library
                   shouldn't excede 20,000 lines of code. This would be used from here on. You can
-                  find it by searching linenoise in the github search.
+                  find it by searching linenoise in the github search. It features almost anything
+                  you would want. Just to name a few, tab completion, hints, emacs keybindings, 
+                  history navigation, history save/load to/from disk. Comes to around 35K when
+                  compiled and linked, a massive achievement over other libraries when including
+                  all expected features.
 
 NOTE:       Making a real shell involves more just than variable expansion, history management, 
             and cursor management, etc. It also needs to be able to run shell scripts. These 
             examples don't implement if, else, case, until, for, set, shopt, echo, although
-            it includes export and cd.
+            it includes export and cd. Each file has its own compilation command.
