@@ -47,11 +47,6 @@
  *      creating a standalone shell or including it in the multi-call binary.
  */
 
-/*
- *
- *  gcc -s -Os -Ilinenoise -o msh minibox-shell.c linenoise/linenoise.c
- *
- */
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
@@ -120,7 +115,7 @@ int shell_cd(char **args) {
     fprintf(stderr, "expected argument to \"cd\"\n");
   } else {
     if (chdir(args[1]) != 0) {
-      perror("shell");
+      perror("msh");
     }
   }
   return 1;
@@ -204,12 +199,12 @@ int launch_program(char **args) {
   if (pid == 0) {
     // Child process
     if (execvp(args[0], args) == -1) {
-      perror("shell");
+      perror("msh");
     }
     exit(EXIT_FAILURE);
   } else if (pid < 0) {
     // Error forking
-    perror("shell");
+    perror("msh");
   } else {
     // Parent process
     do {
